docs: Remove double border at bottom of articles Fixed #256

--- a/docs/themes/cypress/source/css/_partial/page.scss
+++ b/docs/themes/cypress/source/css/_partial/page.scss
@@ -506,8 +506,7 @@
 }
 
 .article-footer-updated {
-  margin: 3em 0;
-  border-top: 1px solid $color-border;
+  margin: 1em 0 3em;
   text-align: center;
   font-size: 0.9em;
   font-family: $font-title;
